--- a/.travis.yml
+++ b/.travis.yml
@@ -16,4 +16,5 @@ script:
   - find HGV_trans_EpiDoc -name "*.xml" | parallel --gnu -X -j8 -u "java -jar jing.jar epidoc/8.13/tei-epidoc.rng {}"
   - find HGV_meta_EpiDoc -name "*.xml" | parallel --gnu -X -j8 -u "java -jar jing.jar epidoc/8.13/tei-epidoc.rng {}"
   - find DDB_EpiDoc_XML -name "*.xml" | parallel --gnu -X -j8 -u "java -jar jing.jar epidoc/8.16/tei-epidoc.rng {}"
+  - find APIS -name "*.xml" | parallel --gnu -X -j8 -u "java -jar jing.jar epidoc/8.13/tei-epidoc.rng {}"
   - find DCLP -name "*.xml" | parallel --gnu -X -j8 -u "java -jar jing.jar epidoc/8.23/tei-epidoc.rng {}"
